# marriage_index_with_ai

./: README.md  SPECIFICATION.md  start.sh
backend/: main.py  pyproject.toml
definitions/: questions.json
frontend/: package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: LoadingSpinner.tsx  QuestionCard.tsx  ResultCard.tsx
